gccida/c2/constant_subword
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1775:44: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  constant_subword( rtx op, int offset, machine_mode mode) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1779:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v6; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1802:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1807:96: error: expected expression
if ( ( ( ( unsigned int)target_flags >> 23) & 4) + 4 != mode_size[v5] && const_int_rtx[64] !=  struct op ) 
                                                                                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1827:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( __int64)op[1]; 
                   ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1832:43: error: invalid suffix 'xmode' on integer constant
v13 = trunc_int_for_mode( v19, *(short *)0xmode); 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1843:28: error: expected expression
if ( const_int_rtx[64] !=  struct op ) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1852:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
r.r[2] = ( __int64)op[2]; 
                   ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1854:13: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etardouble( ( __int64 *)hash, r); 
            ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/real.h:164:49: note: passing argument to parameter here
extern void etardouble          PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1873:12: error: expected identifier or '('
 struct op = ( rtx)*slot_with_hash; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1886:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
element.r[2] = ( __int64)op[2]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1890:14: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etartdouble( ( __int64 *)hash, element); 
             ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/real.h:162:50: note: passing argument to parameter here
extern void etartdouble         PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1906:14: error: passing 'long long *' to parameter of incompatible type 'realvaluetype'
etarldouble( ( __int64 *)hash, element); 
             ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/real.h:163:50: note: passing argument to parameter here
extern void etarldouble         PARAMS ((REAL_VALUE_TYPE, long *));
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1916:12: error: expected identifier or '('
 struct op = ( rtx)*v18; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1927:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
ra.r[2] = ( __int64)op[2]; 
                    ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1935:12: error: expected identifier or '('
 struct op = ( rtx)*v20; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/emit-rtl.c:1941:2: error: expected expression
 struct op = gen_rtx_fmt_w( CONST_INT, VOIDmode, v17); 
 ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/constant_subword/src/obj/emit-rtl.o] Error 1
